# Raytracer

./: CMakeLists.txt  ReadMe.md
src/: Box.cpp  Box.h  Material.h  RayTraceObject.h  RayTraceResult.h  RayTracer.cpp  RayTracer.h  Sphere.cpp  Sphere.h  Utils.cpp  Utils.h  main.cpp
src/Math/: Ray.h
